--- a/.github/workflows/main_helpineedsomebody.yml
+++ b/.github/workflows/main_helpineedsomebody.yml
@@ -67,7 +67,10 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
-    needs: build
+    needs: deploy
+    permissions:
+      id-token: write
+      contents: read
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
