--- a/.github/workflows/main_helpineedsomebody.yml
+++ b/.github/workflows/main_helpineedsomebody.yml
@@ -8,6 +8,10 @@ on:
     branches:
       - main
   workflow_dispatch:
+  
+env:
+  APP_NAME: helpIneedsomebody
+  RESOURCE_GROUP: help
 
 jobs:
   build:
@@ -61,7 +65,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'helpIneedsomebody'
+          app-name: ${{env.APP_NAME}}
           slot-name: 'Staging'
           package: .
 
@@ -86,6 +90,6 @@ jobs:
       - name: swap web app to production
         id: swap-to-prod
         run: |
-          az webapp deployment slot swap -g help -n helpIneedsomebody --slot staging --target-slot production
-          echo "webapp-url=https://$(az webapp show --name helpIneedsomebody -g help --query defaultHostName --output tsv)" >> $GITHUB_OUTPUT
+          az webapp deployment slot swap -g help -n ${{env.APP_NAME}} --slot staging --target-slot production
+          echo "webapp-url=https://$(az webapp show --name ${{env.APP_NAME}} -g ${{env.RESOURCE_GROUP}} --query defaultHostName --output tsv)" >> $GITHUB_OUTPUT
 
